--- a/DMSDriver/DMSDriver/Resources/Storyboards/Profile.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Profile.storyboard
@@ -210,7 +210,7 @@
                                                             <rect key="frame" x="197" y="17" width="123" height="30"/>
                                                             <state key="normal" title="Change password"/>
                                                             <userDefinedRuntimeAttributes>
-                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Change Password"/>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="change-password"/>
                                                             </userDefinedRuntimeAttributes>
                                                             <connections>
                                                                 <action selector="onbtnClickChagePasswordWithBtn:" destination="3RR-dr-gaj" eventType="touchUpInside" id="nG8-F6-RYw"/>
