--- a/DMSDriver/DMSDriver/App/ViewControllers/Order/LoadUnloadOrderVC/LoadUnloadOrder.storyboard
+++ b/DMSDriver/DMSDriver/App/ViewControllers/Order/LoadUnloadOrderVC/LoadUnloadOrder.storyboard
@@ -153,7 +153,7 @@
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="lQ6-cU-PJ5"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
-                                                            <state key="normal" title="Van Load"/>
+                                                            <state key="normal" title="van-load"/>
                                                             <connections>
                                                                 <action selector="onbtnClickLoadUnloadWithBtn:" destination="83f-Uv-ppw" eventType="touchUpInside" id="D71-bQ-KQx"/>
                                                             </connections>
