--- a/DMSDriver/DMSDriver/App/Views/LeftMenuView/LeftMenuCell/ChangePasswordTableViewCell.xib
+++ b/DMSDriver/DMSDriver/App/Views/LeftMenuView/LeftMenuCell/ChangePasswordTableViewCell.xib
@@ -30,13 +30,13 @@
                                     <constraint firstAttribute="width" secondItem="uGH-kG-eE1" secondAttribute="height" id="jr2-eT-aj9"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpq-Dd-Bax">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="change-password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpq-Dd-Bax">
                                 <rect key="frame" x="50" y="11" width="133" height="22"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="0.49803921569999998" green="0.49803921569999998" blue="0.49803921569999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Change Password"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="change-password"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
