--- a/DMSDriver/DMSDriver/App/Views/LoadMoreView/LoadMoreCell.xib
+++ b/DMSDriver/DMSDriver/App/Views/LoadMoreView/LoadMoreCell.xib
@@ -19,13 +19,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="286" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Load more..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Flq-Fs-Vdn">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="load-more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Flq-Fs-Vdn">
                         <rect key="frame" x="0.0" y="0.0" width="286" height="59.5"/>
                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Load more..."/>
+                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="load-more"/>
                         </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
