--- a/DMSDriver/DMSDriver/App/Views/PickerTimeVC/Cell/ContentCell.xib
+++ b/DMSDriver/DMSDriver/App/Views/PickerTimeVC/Cell/ContentCell.xib
@@ -28,7 +28,7 @@
                                     <constraint firstAttribute="height" constant="1" id="Inh-UU-1X8"/>
                                 </constraints>
                             </view>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yQG-an-FI5">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter-title here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yQG-an-FI5">
                                 <rect key="frame" x="0.0" y="0.0" width="373" height="42.5"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
