--- a/DMSDriver/DMSDriver/Resources/Storyboards/Notification.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Notification.storyboard
@@ -272,7 +272,7 @@
                                                 <constraint firstAttribute="height" constant="40" id="3OK-QH-1fE"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
-                                            <state key="normal" title="Unable To Start">
+                                            <state key="normal" title="unable-to-start">
                                                 <color key="titleColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <userDefinedRuntimeAttributes>
