--- a/DMSDriver/DMSDriver/Resources/Storyboards/Loading.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Loading.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Loading View Controller-->
         <scene sceneID="Rg8-o2-Pcb">
             <objects>
-                <viewController id="TFE-SY-7V8" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoadingViewController" id="TFE-SY-7V8" customClass="LoadingViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wCZ-Ho-P99">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
